stopping overflow

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ html{
     position:sticky;
     top:0;
     cursor:pointer;
+    z-index: 1;
 }
 .brand-title{
     font-size:1.5rem;
